--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "test:db": "node test-connection.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -36,12 +35,14 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.90.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "firebase": "^12.6.0",
+    "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
@@ -58,15 +59,15 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@types/pg": "^8.10.0",
-    "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.10.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^16.3.1",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "pg": "^8.11.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
