--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "stripe": "^20.1.2",
